# cmpp-python

./: README.md  setup.cfg  setup.py
.github/workflows/: py_lint.yml  py_test.yml
cmpp/: client.py  constants.py  protocol.py  utils.py
examples/: cmpp_client_example.py
