[metadata]
name = cmpp
version = 0.0.1
description = cmpp is a python implement for CMPP protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/protocol-laboratory/cmpp-python.git
author = ZhangJian He
author_email = shoothzj@gmail.com
license = Apache License 2.0

[options]
packages = find:

[options.packages.find]
where = cmpp
